# Nibble-AI

./: .gitignore  Makefile
services/backend/: .dockerignore  .env.example  API_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  Dockerfile  README.md  SECRETS_MANAGEMENT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
services/backend/Apps/accounts/: admin.py  apps.py  emails.py  managers.py  models.py  selectors.py  serializers.py  services.py  signals.py
services/backend/Apps/admin_panel/: apps.py  selectors.py  serializers.py  services.py
services/backend/Apps/analytics/: admin.py  apps.py  models.py  serializers.py  services.py
services/backend/Apps/billing/: admin.py  apps.py  models.py  serializers.py  services.py
services/backend/Apps/brands/: access.py  admin.py  apps.py  customers.py  models.py  selectors.py  serializers.py  services.py
services/backend/Apps/campaigns/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py
services/backend/Apps/common/: admin.py  apps.py  dates.py  exceptions.py  models.py  money.py  pagination.py  permissions.py  text.py
services/backend/Apps/notifications/: admin.py  apps.py  models.py  push.py  selectors.py  serializers.py  services.py
services/backend/Apps/offers/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py
services/backend/Apps/payouts/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py
services/backend/Apps/products/: admin.py  apps.py  (+4 more)
services/backend/core/: urls.py
(+202 files in other folders)
