[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "firebase-admin>=7.4.0",
    "google-genai>=2.8.0",
    "gunicorn>=23.0.0",
    "openai>=2.41.0",
    "psycopg[binary]>=3.3.4",
    "redis>=5.0.0",
    "whitenoise>=6.9.0",
]
